Some more ToolBar alignment fixes.

--- a/styles/web/common/toolbar.less
+++ b/styles/web/common/toolbar.less
@@ -18,6 +18,21 @@
     margin-bottom: -5px;
 }
 
+.k-toolbar .k-input
+{
+    line-height: inherit;
+    height: inherit;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.k-toolbar .k-combobox .k-dropdown-wrap:before,
+.k-toolbar .k-picker-wrap:before,
+.k-toolbar .k-numeric-wrap:before
+{
+    display: none;
+}
+
 .k-toolbar .k-button .k-sprite,
 .k-overflow-container .k-sprite
 {
@@ -56,7 +71,8 @@
 
 .k-toolbar .k-button,
 .k-toolbar .k-split-button,
-.k-toolbar .k-button-group
+.k-toolbar .k-button-group,
+.k-toolbar .k-widget
 {
     margin: 0 .2em;
 }
